[tool.poetry]
name = "grokking-algorithms-study"
version = "0.1.0"
description = ""
authors = ["henriqueboneto"]
readme = "README.md"
packages = [{include = "grokking_algorithms_study"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
